<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Conversor">

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnConvertir"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />

    <Button
        android:id="@+id/btnReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnReiniciar"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado" />

    <ImageView
        android:id="@+id/imgMascota"
        android:layout_width="221dp"
        android:layout_height="168dp"
        android:clickable="false"
        android:longClickable="false"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@mipmap/mascota"
        android:contentDescription="@string/MascotaPantalla" />

    <RadioGroup
        android:id="@+id/rdbGrupo"
        android:layout_width="274dp"
        android:layout_height="97dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSeleccion">

        <RadioButton
            android:id="@+id/rdbDolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rdbDolar"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdbEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdbEuro"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdbReal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdbReal"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtSeleccion"
        android:layout_width="234dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/txtSeleccion"
        android:textAlignment="center"
        android:textColor="@color/colorSeleccion"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMonto" />

    <TextView
        android:id="@+id/txtConversor"
        android:layout_width="230dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtConversor"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMascota" />

    <EditText
        android:id="@+id/txtMonto"
        android:layout_width="232dp"
        android:layout_height="47dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/txtMonto"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConversor" />

    <EditText
        android:id="@+id/txtResultado"
        android:layout_width="224dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txtMostrarResultado"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdbGrupo" />
</androidx.constraintlayout.widget.ConstraintLayout>